# sdbusplus-example

./: README.md  meson.build  test-hello-service.sh
meson-gen/xyz/openbmc_project/Example/: meson.build
meson-gen/xyz/openbmc_project/Example/Simple/: meson.build
meson-gen/xyz/openbmc_project/Example/Simple/Hello/: meson.build
output/: aserver.hpp  server.cpp
src/: hello-service.cpp
systemd/: xyz.openbmc_project.Example.Simple.service
yaml/xyz/openbmc_project/Example/Simple/: Hello.interface.yaml
